# fastapi-RBAc

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/infra/db/: base_repository.py  models.py  utils.py
src/main/: app.py  auth.py  routers.py
